--- a/package.json
+++ b/package.json
@@ -2,22 +2,6 @@
   "name": "gezinsbudget-app",
   "version": "1.0.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "papaparse": "^5.4.1",
-    "recharts": "^2.7.2",
-    "framer-motion": "^10.16.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.1"
-  },
-  "devDependencies": {
-    "typescript": "^5.3.3"
-  }
+  "scripts": { "dev": "next dev", "build": "next build", "start": "next start" },
+  "dependencies": { "next": "14.2.3", "react": "18.2.0", "react-dom": "18.2.0" }
 }
